<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>

    <string name="mrz1"><![CDATA[P<SURNAME<<NAME<<<<<<<<<<<<<<<<<<<<<<<<<<<]]></string>
    <string name="mrz2"><![CDATA[ AB12345678UZB012345M311231012345678901234567]]></string>
    <string name="Surname" translatable="false">SURNAME</string>
    <string name="Name" translatable="false">NAME</string>
    <string name="Nationality" translatable="false">NATIONALITY</string>
    <string name="switch_camera_button_alt" translatable="false"><![CDATA["   <string name=\"switch_camera_button_alt\">Переключить камеру</string>"]]></string>
    <string name="capture_button_alt">Snapshot</string>
    <string name="ok">Ok</string>
    <string name="confirmation_code_error">Invalid sms code</string>
    <string name="server_error">Server issue</string>
    <string name="unknown_error">Unknown error</string>
    <string name="number_of_attempts_error">Number of attempts to enter SMS verification code exceeded</string>
    <string name="AppIdNotExist">App Id is invalid</string>
    <string name="InvalidArguments">Arguments are not valid</string>
    <string name="nfc">NFC:</string>
    <string name="error_nfc">The document could not be recognized, \ n please try again</string>
    <string name="try_one">Try again</string>
    <string name="next">Next</string>
    <string name="nfc_is_not_enabled">"NFC is available, but not enabled"</string>
    <string name="nfc_is_not_available">NFC is not available on device</string>
    <string name="Enable">Enable</string>
</resources>